# ddgui

./: CMakeLists.txt  dd.cpp  dd.h  ddgui.cpp  ddgui.gresource.xml  ddgui.h  main.cpp
resource/: window.ui
